# minicutest

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  minicutest.h  todo.md
examples/: CMakeLists.txt
examples/include/: mcu_suite1.h
examples/src/: mcu_main.c
exemple/: Makefile  mcu_suite1.h
exemple/include/: mcu_suite1.h
exemple/src/: mcu_main.c  mcu_suite1.c
include/minicutest/: minicutest.h
